--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="Nature.html">
-                  <figure class="cc-effect"><img src="/images/Nature/butterfly1.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="./images/Nature/butterfly1.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Nature</div>
                       <p>Photography</p>
@@ -244,7 +244,7 @@
                   </figure></a></div>
 
                   <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="landscapes.html">
-                    <figure class="cc-effect"><img src="/images/Landscapes/arches.jpg" alt="Image"/>
+                    <figure class="cc-effect"><img src="./images/Landscapes/arches.jpg" alt="Image"/>
                       <figcaption>
                         <div class="h4">Landscapes and Days out</div>
                         <p>Photography</p>
@@ -255,7 +255,7 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="portraits.html">
-                  <figure class="cc-effect"><img src="/images/Portraits/KP2.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="./images/Portraits/KP2.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Portraits</div>
                       <p>Photography</p>
@@ -263,7 +263,7 @@
                   </figure></a></div>
 
                   <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="wedding.html">
-                    <figure class="cc-effect"><img src="/images/Wedding/wedding2.jpg" alt="Image"/>
+                    <figure class="cc-effect"><img src="./images/Wedding/wedding2.jpg" alt="Image"/>
                       <figcaption>
                         <div class="h4">Wedding Photoshoot</div>
                         <p>Photography</p>
