--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="/Projects/calendartodo.html">
-                  <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="./images/project-1.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Calendar with Todo Planner</div>
                       <p>Projects</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="/Projects/calc.html">
-                  <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="./images/project-2.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Calulator</div>
                       <p>Projects</p>
@@ -227,14 +227,14 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="/Projects/weather2.html">
-                  <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="./images/project-3.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Weather App</div>
                       <p>Projects</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="/Projects/listsorter.html">
-                  <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="./images/project-4.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">List Sorter (TODO)</div>
                       <p>Projects</p>
@@ -250,7 +250,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="Nature.html">
-                  <figure class="cc-effect"><img src="/images/Nature/butterfly1.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="./images/Nature/butterfly1.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Nature</div>
                       <p>Photography</p>
@@ -258,7 +258,7 @@
                   </figure></a></div>
 
                   <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="landscapes.html">
-                    <figure class="cc-effect"><img src="/images/Landscapes/arches.jpg" alt="Image"/>
+                    <figure class="cc-effect"><img src="./images/Landscapes/arches.jpg" alt="Image"/>
                       <figcaption>
                         <div class="h4">Landscapes and Days out</div>
                         <p>Photography</p>
@@ -269,7 +269,7 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="portraits.html">
-                  <figure class="cc-effect"><img src="/images/Portraits/KP2.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="./images/Portraits/KP2.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Portraits</div>
                       <p>Photography</p>
@@ -277,7 +277,7 @@
                   </figure></a></div>
 
                   <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="wedding.html">
-                    <figure class="cc-effect"><img src="/images/Wedding/wedding2.jpg" alt="Image"/>
+                    <figure class="cc-effect"><img src="./images/Wedding/wedding2.jpg" alt="Image"/>
                       <figcaption>
                         <div class="h4">Wedding Photoshoot</div>
                         <p>Photography</p>
